// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Friendly test suite #rank should return an ordered list of scales based on intervals ranking 1`] = `
Object {
  "2M": Array [
    "1P 2M 3M 4A 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2M 3M 5P 6M",
    "1P 2M 4P 5P 7m",
    "1P 2M 3m 4P 5P 6M 7M",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "2m": Array [
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 2m 3m 3M 5d 6m 7m",
  ],
  "3M": Array [
    "1P 2M 3M 4A 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3M 5P 6M",
    "1P 2m 3m 3M 5d 6m 7m",
  ],
  "3m": Array [
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 3m 4P 5P 7m",
    "1P 2M 3m 4P 5P 6M 7M",
    "1P 2m 3m 3M 5d 6m 7m",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "4A": Array [
    "1P 2M 3M 4A 5P 6M 7M",
  ],
  "4P": Array [
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 3m 4P 5P 7m",
    "1P 2M 4P 5P 7m",
    "1P 2M 3m 4P 5P 6M 7M",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "5P": Array [
    "1P 2M 3M 4A 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2M 3M 5P 6M",
    "1P 3m 4P 5P 7m",
    "1P 2M 4P 5P 7m",
    "1P 2M 3m 4P 5P 6M 7M",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "5d": Array [
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 2m 3m 3M 5d 6m 7m",
  ],
  "6M": Array [
    "1P 2M 3M 4A 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2M 3M 5P 6M",
    "1P 2M 3m 4P 5P 6M 7M",
  ],
  "6m": Array [
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 2m 3m 3M 5d 6m 7m",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "7M": Array [
    "1P 2M 3M 4A 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3M 4P 5P 6M 7M",
    "1P 2M 3m 4P 5P 6M 7M",
    "1P 2M 3m 4P 5P 6m 7M",
  ],
  "7m": Array [
    "1P 2M 3M 4P 5P 6M 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6m 7m",
    "1P 2M 3m 4P 5P 6M 7m",
    "1P 2m 3m 4P 5P 6m 7m",
    "1P 2m 3m 4P 5d 6m 7m",
    "1P 3m 4P 5P 7m",
    "1P 2M 4P 5P 7m",
    "1P 2m 3m 3M 5d 6m 7m",
  ],
}
`;

exports[`A Friendly test suite classified list of neighboring scales should return [ \`A\`, \`C#\`, \`G\`, \`B\` ]  1`] = `
Array [
  Object {
    "match": 1,
    "note": "A",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 1,
    "note": "G",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "A",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "A",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "A",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "A",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "A",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "B",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "G",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.3333333333333333,
    "note": "C#",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
]
`;

exports[`A Friendly test suite classified list of neighboring scales should return [ \`B\`, \`D\`, \`Eb\`, \`F\`, \`Ab\` ] 1`] = `
Array [
  Object {
    "match": 0.5,
    "note": "Ab",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.5,
    "note": "Ab",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.5,
    "note": "Ab",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 0.5,
    "note": "F",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.5,
    "note": "F",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.5,
    "note": "D",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 0.25,
    "note": "Ab",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "Ab",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.25,
    "note": "Ab",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "F",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.25,
    "note": "B",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 0.25,
    "note": "B",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.25,
    "note": "B",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "B",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "B",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
]
`;

exports[`A Friendly test suite classified list of neighboring scales should return [ \`F#\`, \`C#\`, \`D\`, \`D\`, \`E\`, \`C\` ] 1`] = `
Array [
  Object {
    "match": 0.75,
    "note": "D",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.75,
    "note": "D",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 0.75,
    "note": "D",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.75,
    "note": "E",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.75,
    "note": "E",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 0.75,
    "note": "E",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 0.75,
    "note": "E",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "D",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "E",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "F#",
    "scale": "1P 2m 3m 3M 5d 6m 7m",
    "type": "ALTERED",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 0.25,
    "note": "C",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
]
`;

exports[`A Friendly test suite classified list of neighboring scales should still return neighbours when given just 2 notes 1`] = `
Array [
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3M 4A 5P 6M 7M",
    "type": "LYDIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3M 5P 6M",
    "type": "MAJOR_PENTATONIC",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 1,
    "note": "F#",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3M 4P 5P 6M 7M",
    "type": "IONIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3M 4P 5P 6M 7m",
    "type": "MIXOLYDIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6m 7m",
    "type": "AEOLIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6M 7m",
    "type": "DORIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2m 3m 4P 5P 6m 7m",
    "type": "PHRYGIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2m 3m 4P 5d 6m 7m",
    "type": "LOCRIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 3m 4P 5P 7m",
    "type": "MINOR_PENTATONIC",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 4P 5P 7m",
    "type": "EGYPTIAN",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6M 7M",
    "type": "MELODIC_MINOR",
  },
  Object {
    "match": 1,
    "note": "C#",
    "scale": "1P 2M 3m 4P 5P 6m 7M",
    "type": "HARMONIC_MINOR",
  },
]
`;
